; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_r8169.c_rtl8169_set_wol.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_r8169.c_rtl8169_set_wol.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.ethtool_wolinfo = type { i32 }
%struct.rtl8169_private = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@RTL_FEATURE_WOL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, %struct.ethtool_wolinfo*)* @rtl8169_set_wol to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rtl8169_set_wol(%struct.net_device* %0, %struct.ethtool_wolinfo* %1) #0 {
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca %struct.ethtool_wolinfo*, align 8
  %5 = alloca %struct.rtl8169_private*, align 8
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  store %struct.ethtool_wolinfo* %1, %struct.ethtool_wolinfo** %4, align 8
  %6 = load %struct.net_device*, %struct.net_device** %3, align 8
  %7 = call %struct.rtl8169_private* @netdev_priv(%struct.net_device* %6)
  store %struct.rtl8169_private* %7, %struct.rtl8169_private** %5, align 8
  %8 = load %struct.rtl8169_private*, %struct.rtl8169_private** %5, align 8
  %9 = call i32 @rtl_lock_work(%struct.rtl8169_private* %8)
  %10 = load %struct.ethtool_wolinfo*, %struct.ethtool_wolinfo** %4, align 8
  %11 = getelementptr inbounds %struct.ethtool_wolinfo, %struct.ethtool_wolinfo* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %20

14:                                               ; preds = %2
  %15 = load i32, i32* @RTL_FEATURE_WOL, align 4
  %16 = load %struct.rtl8169_private*, %struct.rtl8169_private** %5, align 8
  %17 = getelementptr inbounds %struct.rtl8169_private, %struct.rtl8169_private* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = or i32 %18, %15
  store i32 %19, i32* %17, align 8
  br label %27

20:                                               ; preds = %2
  %21 = load i32, i32* @RTL_FEATURE_WOL, align 4
  %22 = xor i32 %21, -1
  %23 = load %struct.rtl8169_private*, %struct.rtl8169_private** %5, align 8
  %24 = getelementptr inbounds %struct.rtl8169_private, %struct.rtl8169_private* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 8
  %26 = and i32 %25, %22
  store i32 %26, i32* %24, align 8
  br label %27

27:                                               ; preds = %20, %14
  %28 = load %struct.rtl8169_private*, %struct.rtl8169_private** %5, align 8
  %29 = load %struct.ethtool_wolinfo*, %struct.ethtool_wolinfo** %4, align 8
  %30 = getelementptr inbounds %struct.ethtool_wolinfo, %struct.ethtool_wolinfo* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @__rtl8169_set_wol(%struct.rtl8169_private* %28, i32 %31)
  %33 = load %struct.rtl8169_private*, %struct.rtl8169_private** %5, align 8
  %34 = call i32 @rtl_unlock_work(%struct.rtl8169_private* %33)
  %35 = load %struct.rtl8169_private*, %struct.rtl8169_private** %5, align 8
  %36 = getelementptr inbounds %struct.rtl8169_private, %struct.rtl8169_private* %35, i32 0, i32 0
  %37 = load %struct.TYPE_2__*, %struct.TYPE_2__** %36, align 8
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i32 0, i32 0
  %39 = load %struct.ethtool_wolinfo*, %struct.ethtool_wolinfo** %4, align 8
  %40 = getelementptr inbounds %struct.ethtool_wolinfo, %struct.ethtool_wolinfo* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  %42 = call i32 @device_set_wakeup_enable(i32* %38, i32 %41)
  ret i32 0
}

declare dso_local %struct.rtl8169_private* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @rtl_lock_work(%struct.rtl8169_private*) #1

declare dso_local i32 @__rtl8169_set_wol(%struct.rtl8169_private*, i32) #1

declare dso_local i32 @rtl_unlock_work(%struct.rtl8169_private*) #1

declare dso_local i32 @device_set_wakeup_enable(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
